Calculate Iowa primary contributions

--- a/candidates-analysis.ipynb
+++ b/candidates-analysis.ipynb
@@ -82,8 +82,8 @@
       "RangeIndex: 6514274 entries, 0 to 6514273\n",
       "Data columns (total 23 columns):\n",
       "candidate                 object\n",
-      "candidate_id              int64\n",
-      "year                      int64\n",
+      "candidate_id              float64\n",
+      "year                      float64\n",
       "state                     object\n",
       "party                     object\n",
       "election_status           object\n",
@@ -104,7 +104,7 @@
       "standardized_office       object\n",
       "standardized_status       object\n",
       "two_year_term             object\n",
-      "dtypes: float64(2), int64(2), object(19)\n",
+      "dtypes: float64(4), object(19)\n",
       "memory usage: 1.1+ GB\n"
      ]
     },
@@ -117,7 +117,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"8c63042b-a36b-4f81-8df1-912d1e66c063\"\n",
+       "            notifiedDiv.id = \"3b866e3a-cddd-48ff-8576-6590a900f3c5\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -127,7 +127,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"8c63042b-a36b-4f81-8df1-912d1e66c063\") === null) {\n",
+       "            if (document.getElementById(\"3b866e3a-cddd-48ff-8576-6590a900f3c5\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -187,8 +187,8 @@
       "RangeIndex: 6514274 entries, 0 to 6514273\n",
       "Data columns (total 23 columns):\n",
       "candidate                 object\n",
-      "candidate_id              int64\n",
-      "year                      int64\n",
+      "candidate_id              float64\n",
+      "year                      float64\n",
       "state                     object\n",
       "party                     object\n",
       "election_status           object\n",
@@ -209,7 +209,7 @@
       "standardized_office       object\n",
       "standardized_status       object\n",
       "two_year_term             object\n",
-      "dtypes: datetime64[ns](2), float64(2), int64(2), object(17)\n",
+      "dtypes: datetime64[ns](2), float64(4), object(17)\n",
       "memory usage: 1.1+ GB\n"
      ]
     }
@@ -381,7 +381,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -669,6 +669,76 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate out-of-state contributions for Iowa's Cathy Glasson and Fred Hubbell through the primary election"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filter the data to return contributions to Fred Hubbell and Cathy Glasson through the June 5, 2018 primary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hubbell_primary_contributions = contributions[(contributions[\"candidate\"].str.contains(\"hubbell,\", case=False)) & (contributions[\"state\"] == \"IA\") & (contributions[\"date\"] <= \"2018-06-05\")]\n",
+    "glasson_primary_contributions = contributions[(contributions[\"candidate\"].str.contains(\"glasson,\", case=False)) & (contributions[\"state\"] == \"IA\") & (contributions[\"date\"] <= \"2018-06-05\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "in_out_state\n",
+       "in-state       5,072,033.32\n",
+       "out-of-state   1,017,982.25\n",
+       "unknown           10,305.00\n",
+       "Name: amount, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hubbell_primary_contributions.groupby(\"in_out_state\")[\"amount\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6100320.5700000003"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hubbell_primary_contributions[\"amount\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -678,7 +748,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "in_out_state\n",
+       "in-state         109,689.90\n",
+       "out-of-state   2,064,815.92\n",
+       "Name: amount, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glasson_primary_contributions.groupby(\"in_out_state\")[\"amount\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2174505.8200000003"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glasson_primary_contributions[\"amount\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +803,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"0bdf6247-3881-4b50-b8fb-3d3bdaac18ea\"\n",
+       "            notifiedDiv.id = \"dd1fd2e4-a839-4628-a453-060f84ac930b\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -700,7 +813,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"0bdf6247-3881-4b50-b8fb-3d3bdaac18ea\") === null) {\n",
+       "            if (document.getElementById(\"dd1fd2e4-a839-4628-a453-060f84ac930b\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
