--- a/candidates-analysis.ipynb
+++ b/candidates-analysis.ipynb
@@ -117,7 +117,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"1fdd77cc-696d-4115-b77c-3b0392ef254f\"\n",
+       "            notifiedDiv.id = \"6bcc40e5-de09-441f-80fc-583b7df6e326\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -127,7 +127,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"1fdd77cc-696d-4115-b77c-3b0392ef254f\") === null) {\n",
+       "            if (document.getElementById(\"6bcc40e5-de09-441f-80fc-583b7df6e326\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -1051,7 +1051,7 @@
        "            // append a div with our uuid so we can check that it's already\n",
        "            // been sent and avoid duplicates on page reload\n",
        "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"fdf10cf7-2fe5-4be9-9f38-72374119d329\"\n",
+       "            notifiedDiv.id = \"17e2ccc9-1e19-4768-9e38-19c0ba059946\"\n",
        "            element.append(notifiedDiv)\n",
        "        }\n",
        "\n",
@@ -1061,7 +1061,7 @@
        "        if (document.readyState === 'complete') {\n",
        "            // check for the div that signifies that the notification\n",
        "            // was already sent\n",
-       "            if (document.getElementById(\"fdf10cf7-2fe5-4be9-9f38-72374119d329\") === null) {\n",
+       "            if (document.getElementById(\"17e2ccc9-1e19-4768-9e38-19c0ba059946\") === null) {\n",
        "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
        "                if (Notification.permission !== 'denied') {\n",
        "                    if (Notification.permission !== 'granted') { \n",
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -1330,7 +1330,7 @@
        "1239175  GOVERNOR/LIEUTENANT GOVERNOR     DID NOT ADVANCE             N  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1578,7 +1578,7 @@
        "1236459  ADVANCED TO GENERAL             N  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
        "6100320.5700000003"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1614,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "hubbell = contributions[contributions[\"\"]]"
+   ]
   }
  ],
  "metadata": {
