Fixed total_18 column error

--- a/candidates-analysis.ipynb
+++ b/candidates-analysis.ipynb
@@ -607,7 +607,7 @@
     "contributions_by_candidate.rename(columns={\"standardized_status_x\": \"standardized_status_18\", \"standardized_status_y\": \"standardized_status_14\"}, inplace=True)\n",
     "contributions_by_candidate[\"amount_18_total\"] = contributions_by_candidate[\"amount_18_in_state\"] + contributions_by_candidate[\"amount_18_out_of_state\"] + contributions_by_candidate[\"amount_18_unknown\"]\n",
     "contributions_by_candidate[\"amount_14_total\"] = contributions_by_candidate[\"amount_14_in_state\"] + contributions_by_candidate[\"amount_14_out_of_state\"] + contributions_by_candidate[\"amount_14_unknown\"]\n",
-    "contributions_by_candidate[\"amount_10_total\"] = contributions_by_candidate[\"amount_10_in_state\"] = contributions_by_candidate[\"amount_10_out_of_state\"] + contributions_by_candidate[\"amount_10_unknown\"]\n",
+    "contributions_by_candidate[\"amount_10_total\"] = contributions_by_candidate[\"amount_10_in_state\"] + contributions_by_candidate[\"amount_10_out_of_state\"] + contributions_by_candidate[\"amount_10_unknown\"]\n",
     "contributions_by_candidate.head()"
    ]
   },
